Fixed first working version of the frontend

--- a/frontend/app/components/navbar.hbs
+++ b/frontend/app/components/navbar.hbs
@@ -1,12 +1,13 @@
 
 {{page-title "Dash"}}
 
-<div class="row">
-  <nav class="navbar fixed-top sticky-top navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Dash</a>
-      {{yield}}
-    </div>
-  </nav>
-</div>
+<nav class="navbar fixed-top sticky-top navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Dash</a>
+    {{yield}}
+    <span class="navbar-text">
+      {{this.state.lastUpdate}}
+    </span>
+  </div>
+</nav>
 
