--- a/frontend/app/components/dashboard.hbs
+++ b/frontend/app/components/dashboard.hbs
@@ -1,13 +1,15 @@
-<div class="row">
-  {{#each this.items as |item|}}
-    <div class="col-lg-4 col-md-6 col-12">
-      <Card
-        @type={{item.type}}
-        @id={{item.id}}
-        @title={{item.meta.title}}
-        @subtitle={{item.meta.subtitle}}
-        @attributes={{item.attributes}}
-      ></Card>
-    </div>
-  {{/each}}
+<div class="container-fluid">
+  <div class="row">
+    {{#each this.items as |item|}}
+      <div class="col-lg-4 col-md-6 col-12">
+        <Card
+          @type={{item.type}}
+          @id={{item.id}}
+          @title={{item.meta.title}}
+          @subtitle={{item.meta.subtitle}}
+          @attributes={{item.attributes}}
+        ></Card>
+      </div>
+    {{/each}}
+  </div>
 </div>
