--- a/frontend/app/components/dashboard.hbs
+++ b/frontend/app/components/dashboard.hbs
@@ -2,13 +2,18 @@
   <div class="row">
     {{#each this.items as |item|}}
       <div class="col-lg-4 col-md-6 col-12">
+        {{component item.type id=item.id title=item.meta.title subtitle=item.meta.subtitle ts=item.meta.ts attributes=item.attributes}}
+  
+        <!--
         <Card
           @type={{item.type}}
           @id={{item.id}}
           @title={{item.meta.title}}
           @subtitle={{item.meta.subtitle}}
+          @ts={{item.meta.ts}}
           @attributes={{item.attributes}}
-        ></Card>
+          ></Card>
+        -->
       </div>
     {{/each}}
   </div>
